2008-08-07  Ivan Frade  <ivan.frade@nokia.com>

	* tests/trackerd/example.index
	* tests/trackerd/tracker-index-test.c
	* tests/trackerd/Makefile.am: Moved trackerd index tests to
	libtracker-db as tracker-index-reader-test
		
	* tests/tracker-indexer
	* tests/tracker-indexer/Makefile.am
	* tests/tracker-indexer/tracker-index-test.c: Moved
	tracker-indexer tests to libtracker-db as
	tracker-index-writer-test. They were the only test for
	tracker-indexer so we also remove the folder.

	* tests/libtracker-db/example.index
	* tests/libtracker-db/tracker-index-writer-test.c
	* tests/libtracker-db/Makefile.am
	* tests/libtracker-db/tracker-index-reader-test.c
	* tests/Makefile.am
	* configure.ac: The index code is now merged in libtracker-db, so
	we move the unit tests to libtracker-db. 
	
2008-08-07  Ivan Frade  <ivan.frade@nokia.com>

	* tests/trackerd/Makefile.am
	* tests/trackerd/tracker-index-test.c: Fixed tests and linked with
	new code.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: (main): Fix the flag setting here.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: (main): Make sure we open the db
	index in READONLY mode not READ/WRITE.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/Makefile.am: Make sure we compile with debug
	symbols for gdb.
	
	* src/libtracker-db/tracker-db-index.c: (tracker_db_index_open):
	Don't set priv->reload incorrectly, this meant we wouldn't get
	stats because we thought we couldn't open the file. This means
	t-s-t is now working again.

	* src/trackerd/tracker-query-tree.c: Use TRACKER_IS_LANGUAGE for
	TrackerLanguage now it is a GObject.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-index.c: Don't free the
	priv->filename before closing the index, causes weird debug
	messages which depend on that pointer.

2008-08-07  Martyn Russell  <martyn@imendio.com>
